k8s/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      imagePullSecrets:
      - name: acr-auth
      containers:
      - name: api-gateway
        image: gratitudeappranya.azurecr.io/samples/gratitude-srv-api-gateway:latest
        ports:
        - containerPort: 5000
