k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      imagePullSecrets:
        - name: acr-auth
      containers:
      - name: client
        image: gratitudeappranya.azurecr.io/samples/gratitude-frontend:latest
        ports:
        - containerPort: 3000
