k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  labels:
    app: client
spec:
  type: LoadBalancer
  selector:
    app: client
  ports:
  - port: 3000
    targetPort: 3000
