k8s/entries-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: entries-service
  labels:
    app: entries
spec:
  type: LoadBalancer
  selector:
    app: entries
  ports:
  - port: 50051
    targetPort: 50051
