k8s/moods-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moods-api-service
  labels:
    app: moods-api
spec:
  type: LoadBalancer
  selector:
    app: moods-api
  ports:
  - port: 5002
    targetPort: 5002
