k8s/server-main-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-main-service
  labels:
    app: server-main
spec:
  type: LoadBalancer
  selector:
    app: server-main
  ports:
  - port: 5001
    targetPort: 5001
